--- a/2020/lecture_notes/tex/3_Wicks_Theorem_a.tex
+++ b/2020/lecture_notes/tex/3_Wicks_Theorem_a.tex
@@ -353,7 +353,7 @@ Wick's theorem simply generalizes this observation to any string of creation and
 Formally defined, Wick's theorem states: 
 \begin{align*}
 x_1 \cd x_m &= n[x_1 \cd x_m ]  \\
-&+ \sum_{i < j} \contraction{n[x_1 \cd}{x}{{}_i \cd }{x} n[x_1 \cd x_i \cd x_j x_2] \\
+&+ \sum_{i < j} \contraction{n[x_1 \cd}{x}{{}_i \cd }{x} n[x_1 \cd x_i \cd x_j\cd  x_m] \\
 &+ \sum_{\substack{i_1 < j_1,  i_2 < j_2 \\ i_1 < j_2, j_1 \neq j_2}} 
 \contraction{n[x_1 \cd}{x}{{}_{i_1} \cd x_{i_2} \cd}{x}
 \contraction[2ex]{n[x_1 \cd x_{i_1} \cd }{x}{{}_{i_2} \cd x_{j_1} \cd}{x}
@@ -550,10 +550,6 @@ We will write the four types of contractions that can formed (contractions betwe
 %We are still not quite where we want to be in terms of quickly and efficiently evaluating matrix elements of operator strings. 
 %The derivation of Slater's rules still took us two pages. 
 %Next, we will find ways to 
-% 3_Wicks_Theorem_b: 
-%\subsection{Proof of 2 Lemmas}
-%\subsection{Proof of Wick's Theorem}
-%\subsection{Proof of Generalized Wick's Theorem}
 
 
 % 3_Particle_Hole_a: 
