--- a/2020/lecture_notes/tex/3_Wicks_Theorem_a.tex
+++ b/2020/lecture_notes/tex/3_Wicks_Theorem_a.tex
@@ -354,7 +354,7 @@ Formally defined, Wick's theorem states:
 \begin{align*}
 x_1 \cd x_m &= n[x_1 \cd x_m ]  \\
 &+ \sum_{i < j} \contraction{n[x_1 \cd}{x}{{}_i \cd }{x} n[x_1 \cd x_i \cd x_j\cd  x_m] \\
-&+ \sum_{\substack{i_1 < j_1,  i_2 < j_2 \\ i_1 < j_2, j_1 \neq j_2}} 
+&+ \sum_{\substack{i_1 < j_1,  i_2 < j_2 \\ i_1 < i_2, j_1 \neq j_2}} 
 \contraction{n[x_1 \cd}{x}{{}_{i_1} \cd x_{i_2} \cd}{x}
 \contraction[2ex]{n[x_1 \cd x_{i_1} \cd }{x}{{}_{i_2} \cd x_{j_1} \cd}{x}
 n[x_1 \cd x_{i_1} \cd x_{i_2} \cd x_{j_1} \cd x_{j_2} \cd x_m ]  \\
